# xtpms

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  configure.cmd  configure.ps1  environment.yml  vcpkg.json  xtpms.sln
tests/: mathematica_convergence.py  rev_surface_mesh.py  semi_analytical_kappa.py  test_aabb_tree.cpp  test_adc_convergence.py  test_geometry_voxel.cpp  test_marching_cubes.cpp  test_periodic_mesh_periodize.cpp  test_periodic_spatial_hash.cpp
tests/convergence_results/: asymptotic_data.csv  convergence_data.csv  correct_asymptotic_data.csv  mathematica_asymptotic.csv  mathematica_data.csv  new_asymptotic_data.csv
xtpms/: main.cpp  xtpms.vcxproj  xtpms.vcxproj.filters
xtpms/src/: AABBTree.h  AsymptoticConductivity.cpp  AsymptoticConductivity.h  ConjugateSurface.cpp  ConjugateSurface.h  GeometryVoxel.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesTables.inl  MeshTypes.h  PeriodicMesh.cpp  PeriodicMesh.h  PeriodicRemesh.cpp  PeriodicRemesh.h  PeriodicSpatialHash.h  PeriodicSpatialHashGeometries.h  VertexGeometry.cpp  VertexGeometry.h
